--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             style="background-color: #40a2e3"
             type="button"
             data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar"
+            data-bs-target="#navbarOffcanvasLg"
             aria-controls="offcanvasNavbar"
             aria-label="Toggle navigation"
           >
@@ -35,7 +35,7 @@
           <div
             class="offcanvas offcanvas-end"
             tabindex="-1"
-            id="offcanvasNavbar"
+            id="navbarOffcanvasLg"
             aria-labelledby="offcanvasNavbarLabel"
           >
             <div class="offcanvas-header">
@@ -43,6 +43,7 @@
                 JendelaJatim
               </h5>
               <button
+              
                 type="button"
                 class="btn-close"
                 data-bs-dismiss="offcanvas"
@@ -64,7 +65,7 @@
                 </li>
                 <li class="nav-item pe-3" id="navigasi">
                   <a
-                    class="nav-link active"
+                    class="nav-link"
                     aria-current="page"
                     href="#destinasi"
                     style="color: #8fd14f"
@@ -73,7 +74,7 @@
                 </li>
                 <li class="nav-item pe-3" id="navigasi">
                   <a
-                    class="nav-link active"
+                    class="nav-link"
                     aria-current="page"
                     href="galeri/gallery.html"
                     style="color: #8fd14f"
@@ -82,7 +83,7 @@
                 </li>
                 <li class="nav-item pe-3" id="navigasi">
                   <a
-                    class="nav-link active"
+                    class="nav-link"
                     aria-current="page"
                     href="#contact"
                     style="color: #8fd14f"
@@ -91,7 +92,7 @@
                 </li>
                 <li class="nav-item dropdown">
                   <a
-                    class="nav-link dropdown-toggle active"
+                    class="nav-link dropdown-toggle"
                     href="#list"
                     style="color: #8fd14f"
                     role="button"
@@ -196,7 +197,7 @@
             <div class="content">
               <div class="author">KABUPATEN MALANG</div>
               <div class="title">PANTAI</div>
-              <div class="topic">BALEKAMBANG</div>
+              <div class="topic balek">BALEKAMBANG</div>
               <div class="des">
                 Pantai Balekambang memukau dengan pura di atas batu karang dan
                 pantai berpasir putih yang indah. .
@@ -461,7 +462,7 @@
               <i class="fa fa-envelope"></i>
 
               <h3>Email</h3>
-              <h4>jendela@gmail.com</h4>
+              <h4>jendelajatim<br>@gmail.com</h4>
             </div>
             <div class="phone kotak">
               <i class="fa fa-phone"></i>
@@ -500,7 +501,7 @@
     </section>
 
     <footer>
-      <div class="container-footer d-flex justify-content-space-between">
+      <div class="containerr-footer d-flex justify-content-space-between">
         <div class="teks-footer pertama">
           <h3 class="fw-semibold">
             Jendela<span style="color: white">Jatim</span>
@@ -511,7 +512,7 @@
           />
         </div>
         <div class="list-kota">
-          <ul class="footer-kota">
+          <ul class="footer-kota ">
             <h3>Kota</h3>
             <li><a href="https://maps.app.goo.gl/tdfX6rx5q36uU2tm9">Surabaya</a></li>
             <li><a href="https://maps.app.goo.gl/AaGXYKUpAjp85V8d8">Malang</a></li>
