--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- Navbar links -->
         <ul id="navbar" >
-          <li class="llist"><a href="#">Home</a></li>
+          <li class="llist"><a href="#reset">Home</a></li>
           <li class="llist"><a href="#destinasi">Destinasi</a></li>
           <li class="llist"><a href="galeri/gallery.html">Gallery</a></li>
           <li class="llist"><a href="#contact">Contact</a></li>
