--- a/galeri/gallery.html
+++ b/galeri/gallery.html
@@ -261,10 +261,10 @@
           <div class="itemm fall">
             <img src="terjun/talun.jpeg" alt="" />
             <div class="overlay">
-              <a href="https://id.wikipedia.org/wiki/Air_Terjun_Telun_Berasap"
+              <a href="https://id.wikipedia.org/wiki/Air_terjun_Coban_Rais"
                 >LIHAT</a
               >
-              <p>Talun Waterfall</p>
+              <p>Rais Waterfall</p>
             </div>
           </div>
           <!-- card 5 mount end -->
